# rkd

./: .gitignore  CMakeLists.txt  README.md
include/: robot_kinematics_dynamics.h
src/: robot_kinematics_dynamics.cpp
tests/: CMakeLists.txt  test_robot_kinematics_dynamics.cpp
